ADD: game status and winning condition

--- a/apps/playground-monorepo/src/app/app.component.html
+++ b/apps/playground-monorepo/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!-- <app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet> -->
+@if ((gameStatus$ | async) === 'won') {
+    <div>Congratz! You WON!!!</div>
+}
 <div style="display: flex;">
     @for (cup of cups; let idCup = $index; track idCup) {
         <lib-cup [cupContents]="cup" [selected]="idCup === selected" [closed]="false" (click)="clickHandler(idCup)"></lib-cup>
