ADD: restart functionality

--- a/lib/potion-puzzle/components/src/lib/lib-potion-puzzle-components/lib-potion-puzzle-components.component.html
+++ b/lib/potion-puzzle/components/src/lib/lib-potion-puzzle-components/lib-potion-puzzle-components.component.html
@@ -11,3 +11,4 @@ Level {{ level }}
     <textarea name="state" id="state" [(ngModel)]="state" style="margin-top: 20px; width: 150px; height: 120px;" disabled></textarea>
     <button>Start</button>
 </div>
+<button (click)="restartLevel()">Restart</button>
