ADD: Button to add empty cup

--- a/lib/potion-puzzle/components/src/lib/lib-potion-puzzle-components/lib-potion-puzzle-components.component.html
+++ b/lib/potion-puzzle/components/src/lib/lib-potion-puzzle-components/lib-potion-puzzle-components.component.html
@@ -12,3 +12,4 @@ Level {{ level }}
     <button>Start</button>
 </div>
 <button (click)="restartLevel()">Restart</button>
+<button (click)="addEmptyCup()">Add Cup</button>
