--- a/apps/potion-puzzle/src/app/app.component.html
+++ b/apps/potion-puzzle/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <router-outlet></router-outlet> -->
+<h2>{{ title }}</h2>
 <lib-lib-potion-puzzle-components></lib-lib-potion-puzzle-components>
