feat(History): add history (incomplete, needs rework)

--- a/lib/potion-puzzle/components/src/lib/lib-potion-puzzle-components/lib-potion-puzzle-components.component.html
+++ b/lib/potion-puzzle/components/src/lib/lib-potion-puzzle-components/lib-potion-puzzle-components.component.html
@@ -9,3 +9,5 @@ Level {{ level }}
 </div>
 <button (click)="restartLevel()">Restart</button>
 <button (click)="addEmptyCup()">Add Cup</button>
+<button (click)="roleBack()">Roleback</button>
+<div>{{ moves }}</div>
